<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<android.support.constraint.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/item_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="48dp"
        app:layout_constraintHeight_min="48dp"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="227dp"
        app:layout_constraintWidth_min="227dp" />

    <EditText
        android:id="@+id/hsn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hsn_sac"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/item_name"
        app:layout_constraintHeight_max="48dp"
        app:layout_constraintHeight_min="48dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/item_name"
        app:layout_constraintTop_toBottomOf="@+id/item_name"
        app:layout_constraintWidth_max="227dp"
        app:layout_constraintWidth_min="227dp" />

    <EditText
        android:id="@+id/qty"
        android:layout_width="66dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="Qty"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="48dp"
        app:layout_constraintHeight_min="48dp"
        app:layout_constraintStart_toEndOf="@+id/price"
        app:layout_constraintTop_toTopOf="@+id/price"
        app:layout_constraintWidth_max="66dp"
        app:layout_constraintWidth_min="66dp" />

    <EditText
        android:id="@+id/price"
        android:layout_width="66dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:ems="10"
        android:hint="Price"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/hsn"
        app:layout_constraintHeight_max="48dp"
        app:layout_constraintHeight_min="48dp"
        app:layout_constraintStart_toEndOf="@+id/hsn"
        app:layout_constraintTop_toTopOf="@+id/hsn"
        app:layout_constraintWidth_max="66dp"
        app:layout_constraintWidth_min="66dp" />

    <TextView
        android:id="@+id/total"
        android:layout_width="98dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/total_price"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/hsn"
        app:layout_constraintHeight_max="98dp"
        app:layout_constraintHeight_min="98dp"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/hsn"
        app:layout_constraintTop_toBottomOf="@+id/hsn"
        app:layout_constraintWidth_max="49dp"
        app:layout_constraintWidth_min="49dp" />

    <EditText
        android:id="@+id/seller_add"
        android:layout_width="165dp"
        android:layout_height="138dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/seller_address"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:minLines="10"
        app:layout_constraintHeight_max="165dp"
        app:layout_constraintHeight_min="165dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total"
        app:layout_constraintWidth_max="138dp"
        app:layout_constraintWidth_min="138dp" />

    <EditText
        android:id="@+id/bill_add"
        android:layout_width="165dp"
        android:layout_height="138dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/billing_address"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:minLines="10"
        app:layout_constraintBottom_toBottomOf="@+id/seller_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="165dp"
        app:layout_constraintHeight_min="165dp"
        app:layout_constraintTop_toTopOf="@+id/seller_add"
        app:layout_constraintWidth_max="138dp"
        app:layout_constraintWidth_min="138dp" />

    <EditText
        android:id="@+id/gstin"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/gstin"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintHeight_max="48dp"
        app:layout_constraintHeight_min="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seller_add"
        app:layout_constraintWidth_max="227dp"
        app:layout_constraintWidth_min="227dp" />

    <EditText
        android:id="@+id/pan"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/pan_number"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/gstin"
        app:layout_constraintHeight_max="48dp"
        app:layout_constraintHeight_min="48dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/gstin"
        app:layout_constraintTop_toBottomOf="@+id/gstin"
        app:layout_constraintWidth_max="227dp"
        app:layout_constraintWidth_min="227dp" />

    <EditText
        android:id="@+id/tax_rates"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/tax_rates"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/gstin"
        app:layout_constraintEnd_toEndOf="@+id/bill_add"
        app:layout_constraintHeight_max="48dp"
        app:layout_constraintHeight_min="48dp"
        app:layout_constraintWidth_max="113dp"
        app:layout_constraintWidth_min="113dp" />

    <EditText
        android:id="@+id/date_of_trans"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date_of_transaction"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/pan"
        app:layout_constraintEnd_toEndOf="@+id/tax_rates"
        app:layout_constraintHeight_max="48dp"
        app:layout_constraintHeight_min="48dp"
        app:layout_constraintWidth_max="113dp"
        app:layout_constraintWidth_min="113dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/create_invoice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pan"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="112dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="@+id/total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toEndOf="@+id/total"
        app:layout_constraintTop_toTopOf="@+id/total"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
</ScrollView>